# Calm-Data_Generator

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_ES.md  LICENSE  MANIFEST.in  README.md  README_ES.md  comparison_report.html  ctgan_drifted_feature_drift.csv  debug_block_failure.py  drift_stats.html  generated_profile.html  index.html  lgbm_drifted_feature_drift.csv  manual_gears_test.py  pyproject.toml  report_results.json  requirements.txt  scgen_test_output.txt  test_instalacion.py
.github/workflows/: compability.yml  main.yml
calm_data_generator/: __init__.py  cli.py  logger.py
calm_data_generator/Presets/: AdasynBalancePreset.py  BalancePreset.py  BasePreset.py  BigDataset.py  CategorityPreset.py  ClusteringPreset.py  CorrelationPreset.py  CorrelationTimeSeriesPreset.py  DataSynthetizerPreset.py  DifferentialPrivacyPreset.py  ImbalancePreset.py  MaxQualityDataPreset.py  MissingValues.py  MultiVariateTimeSeriesPreset.py  OutlierPreset.py  QualityTabulatDataPreset.py  QuickGeneration.py  QuickTimeSeriesGeneration.py  SCGenPreset.py  SimpleGenerator.py  SingleCellPreset.py  TimeSeriesPreset.py
calm_data_generator/anonymizer/: API_REFERENCE.md  PrivacyReporter.py  README.md  __init__.py  privacy.py  tutorial.py
calm_data_generator/docs/: ANONYMIZER_REFERENCE.md  ANONYMIZER_REFERENCE_ES.md  API.md  API_ES.md  CLINICAL_BLOCK_GENERATOR_REFERENCE.md  CLINICAL_BLOCK_GENERATOR_REFERENCE_ES.md  CLINICAL_GENERATOR_REFERENCE.md  CLINICAL_GENERATOR_REFERENCE_ES.md  DOCUMENTATION.md  DOCUMENTATION_ES.md  DRIFT_INJECTOR_REFERENCE.md  DRIFT_INJECTOR_REFERENCE_ES.md  REAL_BLOCK_GENERATOR_REFERENCE.md  REAL_BLOCK_GENERATOR_REFERENCE_ES.md  REAL_GENERATOR_REFERENCE.md  REAL_GENERATOR_REFERENCE_ES.md  REPORTS_REFERENCE.md  REPORTS_REFERENCE_ES.md  SCENARIO_INJECTOR_REFERENCE.md  (+5 more)
test_output_clinic_block/: ClinicalDataGeneratorBlock_Drifted_feature_drift.csv  drift_stats.html  report_results.json
tests/: debug_river.py  test_anndata_support.py  test_block_generators_extended.py  test_clinic_block_generator.py  test_clinical_advanced.py  test_comprehensive.py  test_comprehensive_reporting.py  test_correlation_propagation.py  test_discriminator_reporter.py  test_disease_effects_fix.py  test_drift_correlations.py  test_drift_injector_advanced.py  test_drift_injector_math.py  test_end_to_end.py  test_imbalance.py  test_migration.py  test_presets.py  test_quality_metrics.py  test_real_block_generator.py  test_real_generator_persistence.py  test_reporters_extended.py  test_reporting_fix.py  test_river_integration.py  test_scenario_extended.py  test_single_call.py  test_singlecell_synthesis.py  test_stream_block_generator.py  test_super_comprehensive.py  test_tabular_extended.py  test_timeseries_extended.py  test_timeseries_real.py
tutorial_drifts_output/: DriftInjector_feature_gradual.csv  comparison_report.html  drift_results.json  drift_stats.html  generated_profile.html  index.html  sdv_scores.html
(+117 files in other folders)
