[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calm-data-generator"
version = "1.0.0"
description = "CALM-Data-Generator: A Python library for synthetic data generation with support for drift injection, privacy, and clinical data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alejandro Belda Fernandez", email = "alejandrobeldafernandez@gmail.com" },
]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "lightgbm>=4.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.0.0",
    "imbalanced-learn>=0.10.0",
    "sdv>=1.0.0",
    "torch>=2.0.0",
    "smartnoise-synth>=1.0.0",
    "ydata-profiling>=4.0.0",
    "scvi-tools>=1.0.0",
    "anndata>=0.10.0",
    "shap>=0.40.0"
]

[project.optional-dependencies]
stream = [
    "river>=0.21.0"
]

timeseries = [
    "gretel-synthetics>=0.20.0",  # For DGAN (DoppelGANger) time series generation
]

full = [
    "calm-data-generator[stream]",
    "calm-data-generator[timeseries]"
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
calm_data_generator = ["tutorials/*.py", "docs/*.md"]

[project.scripts]
calm-data-generator = "calm_data_generator.cli:main"
