[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calm-data-generator"
version = "1.0.0"
description = "CALM-Data-Generator: A Python library for synthetic data generation with support for drift injection and clinical data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Alejandro Belda Fernandez", email = "alejandrobeldafernandez@gmail.com" },
]
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.3.0",
    "scipy>=1.10.0,<1.15.0",
    "tables>=3.10.0",
    "h5py>=3.15.0",
    "ydata-profiling>=4.18.0",
    "synthcity>=0.2.12",
    "sdmetrics>=0.27.0",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
    "scikit-learn>=1.5.0",
    "torch>=2.2.0,<2.4.0",
    "torchvision>=0.17.0,<0.19.0",
    "opacus<1.5",
    "pyarrow<15.0.0",

    "lightgbm>=4.5.0",
    "imbalanced-learn>=0.12.0",
    "copulae>=0.7.9",
    "anndata>=0.10.0",
    "scvi-tools>=1.2.0",
    "lightning>=2.1.0,<2.4.0",
    "torchmetrics>=1.0.0",
    "plotly>=5.18.0",
    "cell-gears>=0.1.1",
    "torch-geometric>=2.5.0",
    "huggingface-hub>=0.34.0,<1.0",
    "xgboost>=2.0.0,<3.0.0"
]
[project.optional-dependencies]
stream = [
    "river>=0.21.0"
]

full = [
    "calm-data-generator[stream]",
   
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
calm_data_generator = ["tutorials/*.py", "docs/*.md"]

[project.scripts]
calm-data-generator = "calm_data_generator.cli:main"
